--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,12 @@ h3 {
     font-weight: 500;
 }
 
+h4{
+text-align: center;
+font-size: 14px;
+font-family: monospace;
+}
+
 form {
     display: flex;
 }
@@ -45,7 +51,7 @@ strong {
 
 .content {
     margin: 5% auto;
-    max-width: 90%;
+    width: 50%;
     padding: 30px;
     box-shadow: 3px 3px 16px 4px rgba(0, 0, 0, 0.1);
 }
